Fix syntax light disappear when jump from [find] buffer

--- a/css/style.less
+++ b/css/style.less
@@ -120,7 +120,7 @@ html, body {
 .cursor {
   position: absolute;
   width: 1ch;
-  opacity: 0.3;
+  opacity: 0.5;
   white-space: pre;
   height: 1rem;
   border-radius: 1px;
